src/scss/sections/_nav.scss
@use "../utils" as u;

.navigation {
    @include u.breakpoint(desktop) {
        // background-color: #ffffff30;
        width: 100vw;
        position: fixed;
        top: 0;
        left: 0;
    }
}

.scroll {

    background-color: transparent;

    @include u.breakpoint(desktop) {
        background-color: #132c3dde;
        z-index: 9999;
        transition: background-color 250ms ease-in;
    }
}

.nav-logos-wrapper {
    display: flex;
    justify-content: center;
}

.personal-logo {
    height: 125px;
    width: 125px;
    align-self: center;
    opacity: 0.95;

    &:hover {
        opacity: 1;
        -webkit-transform: scale(1.02);
        -ms-transform: scale(1.02);
        transform: scale(1.02);
    }
}

.mobile-menu {
    width: 45px;
    height: 45px;
    position: absolute;
    right: 0;
    margin: 2rem 1rem 2rem 0;
    color: var(--dark-yellow);
    cursor: pointer;

    @include u.breakpoint(desktop) {
        display: none;
    }
} 

nav {
    visibility: hidden;    // Initially
    position: fixed;
    opacity: 0;
    top: 0;
    right: 0;
    width: 100%;
    height: 100vh;
    z-index: 9999;    // for pos abs or fixed (high to sit on top of everything)
    padding: 4rem 1rem;
    background: var(--dark-yellow);

    transition: 69ms ease-in;

    &.show {
        visibility: visible;
        opacity: 1;
    }

    @include u.breakpoint(desktop) {
        display: flex;
        background: none;
        position: unset;
        height: auto;
        padding: 1rem;
    }
}

.nav-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 90%;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
        align-items: center;
    }
}

.nav-items-container {
    margin: 2rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
        justify-content: space-evenly;
    }
}

.mobile-exit {
    width: 45px;
    height: 45px;
    margin-left: auto;
    cursor: pointer;

    @include u.breakpoint(desktop) {
        display: none;
    }
}

.primary-nav {
    display: flex;
    flex-direction: column;
    align-items: center;

    @include u.breakpoint(desktop) {
        flex-direction: row;
        width: 100%;
        justify-content: space-evenly;
    }
}

.secondary-nav {
    display: flex;
    flex-direction: column;
    align-items: center;

    @include u.breakpoint(desktop) {
        flex-direction: row;
    }
}

.nav-item {
    color: var(--background-blue);
    display: flex;
    justify-content: center;
    margin-bottom: 3rem;
    font-size: 24px;

    @include u.breakpoint(tablet) {
        margin-bottom: 4rem;
    }

    @include u.breakpoint(desktop) {
        color: var(--dark-yellow);
        text-transform: uppercase;
        font-size: 18px;
        margin-bottom: 0;
        padding-bottom: 0.8rem;
        border-bottom: 5px solid transparent;

        &.active {
            border-bottom: 5px solid var(--coral);
            transition: 30ms;
        }
    
        &:hover {
            border-bottom: 5px solid var(--coral);
            transition: 250ms linear;
        }
    }

    @include u.breakpoint(large-desktop) {
        font-size: 20px;
    }

    @include u.breakpoint(monitor) {
        font-size: 22px;
    }
}

.nav-socials-container {
    display: flex;
    justify-content: space-evenly;

    @include u.breakpoint(desktop) {
        display: none;
    }
}

.button-resume {
    border: solid var(--coral) 1.5px;
    border-radius: 18px;
    padding: 0.69rem 0.5rem;
    
    @include u.breakpoint(desktop) {
        opacity: 0.95;

        &:hover {
            border-bottom: solid var(--coral) 1.5px;
            opacity: 1;
            -webkit-transform: scale(1.1);
            -ms-transform: scale(1.1);
            transform: scale(1.1);
        }    
    }
}

.top-nav-container {

    padding-top: 2rem;

    @include u.breakpoint(desktop) {
        padding-top: 1rem;
        padding-left: 3rem;
        padding-right: 3rem;
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }

    @include u.breakpoint(large-desktop) {
        padding-left: 6rem;
        padding-right: 6rem;    
    }
}

